2025-10-09 Se agrega campos de interplantas y procesador ext.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -559,6 +559,9 @@
     <Compile Include="Models\CTZ_Engineering_Dimension.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CTZ_ExternalProcessorNames.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CTZ_ExternalProcessors.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
