--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -26,6 +26,16 @@
 		<add key="portEmail" value="25" />
 		<add key="emailSMTP" value="noreply-tkmm@thyssenkrupp-materials.com" />
 		<add key="paswordEmail" value="" />
+		<!-- SAP RFC -->
+		<add key="SapServer" value="10.17.177.11" />
+		<add key="SapSystemNumber" value="02" />
+		<add key="SapUser" value="XOCHITEMOLA" />
+		<add key="SapPassword" value="ay5gf0qr04*" />
+		<add key="SapClient" value="100" />
+		<add key="SapLanguage" value="EN" />
+		<add key="SapRouter" value="/H/10.17.63.114/S/3299" />
+		<add key="SapSystemName" value="T60" />
+		
 	</appSettings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -97,7 +107,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
