2025-10-30 Se configura PoC RFC SAP para P60.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -26,7 +26,17 @@
 		<add key="portEmail" value="25" />
 		<add key="emailSMTP" value="noreply-tkmm@thyssenkrupp-materials.com" />
 		<add key="paswordEmail" value="" />
-		<!-- SAP RFC -->
+		<!-- SAP RFC P60 -->
+		<add key="SapServer" value="10.17.178.14" />
+		<add key="SapSystemNumber" value="00" />
+		<add key="SapUser" value="XOCHITEMOLA" />
+		<add key="SapPassword" value="ay5gf0qr04*" />
+		<add key="SapClient" value="100" />
+		<add key="SapLanguage" value="EN" />
+		<add key="SapRouter" value="/H/saprtr.erp.hp.thyssenkrupp.com/S/3299" />
+		<add key="SapSystemName" value="P60" />
+		<!-- SAP RFC T60 -->
+		<!--
 		<add key="SapServer" value="10.17.177.11" />
 		<add key="SapSystemNumber" value="02" />
 		<add key="SapUser" value="XOCHITEMOLA" />
@@ -35,7 +45,7 @@
 		<add key="SapLanguage" value="EN" />
 		<add key="SapRouter" value="/H/10.17.63.114/S/3299" />
 		<add key="SapSystemName" value="T60" />
-		
+		-->
 	</appSettings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
