--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -15,12 +15,15 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
 		<add key="aspnet:MaxJsonDeserializerMembers" value="3147483647" />
-		<!-- Envio desde lagermex -->
-		<!--
-		<add key="smtpServer" value="pop4.lagermex.com.mx" />
-		<add key="portEmail" value="25" />
-		<add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx" />
-		-->
+		<!-- Configuración SAP RFC -->
+		<add key="SapServer" value="10.17.178.14" />
+		<add key="SapSystemNumber" value="00" />
+		<add key="SapUser" value="XOCHITEMOLA" />
+		<add key="SapPassword" value="ay5gf0qr04*" />
+		<add key="SapClient" value="100" />
+		<add key="SapLanguage" value="EN" />
+		<add key="SapRouter" value="/H/saprtr.erp.hp.thyssenkrupp.com/S/3299" />
+		<add key="SapSystemName" value="P60" />
 		<!--Para desde servidores en azure-->
 		<add key="smtpServer" value="smtpr-nlb1.tkmx.io" />
 		<add key="portEmail" value="25" />
