--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -63,6 +63,7 @@
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="QRCoder" version="1.5.1" targetFramework="net472" />
+  <package id="RequeraSapConnector.Native.x64" version="1.3.0" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
   <package id="SpreadsheetLight" version="3.5.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
